<resources>
    <string name="app_name">Court Conter</string>

    <string name="hello_world">Hello world!</string>
    <string name="team_a">Team A</string>
    <string name="zero">0</string>
    <string name="three_points">+3 Points</string>
    <string name="two_points">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
</resources>
